--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,6 @@
   padding: 0;
 }
 
-html {
-  font-size: 16px;
-}
-
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -45,6 +41,7 @@ video {
 
 body {
   font-family: "cantarell", sans-serif;
+  font-size: 15px;
   font-weight: 400;
   font-style: normal;
   color: var(--pink);
@@ -59,6 +56,12 @@ header {
   background-color: var(--darkgray);
   height: 80px;
   padding: 15px 0;
+}
+
+@media (min-width: 1200px) {
+  p {
+    font-size: 18px;
+  }
 }
 
 .navigation {
@@ -78,6 +81,7 @@ a {
   color: var(--pink);
   text-decoration: none;
 }
+
 h1 {
   font-family: "eight";
   font-weight: 400;
@@ -87,6 +91,18 @@ h1 {
 .intro {
   text-align: center;
   padding: 100px 0 130px;
+}
+
+.intro p,
+.nav {
+  margin-bottom: 40px;
+}
+
+@media (min-width: 1200px) {
+  .intro p,
+  .nav {
+    margin-bottom: 80px;
+  }
 }
 
 .country {
