--- a/css/main.css
+++ b/css/main.css
@@ -54,8 +54,7 @@ html {
 
 header {
   background-color: var(--darkgray);
-  height: 80px;
-  padding: 15px 0;
+  padding: 20px 0;
 }
 
 @media (min-width: 1200px) {
@@ -98,13 +97,24 @@ h1 {
   margin-bottom: 40px;
 }
 
+@media (max-width: 768px) {
+  .navigation {
+    display: none;
+  }
+  .intro {
+    padding: 50px 0 65px;
+  }
+  header {
+    background-color: var(--gray);
+  }
+}
+
 @media (min-width: 1200px) {
   .intro p,
   .nav {
     margin-bottom: 80px;
   }
 }
-
 .country {
   border-radius: 200px;
   overflow: hidden;
