--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ h1 {
   margin-bottom: 40px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .navigation {
     display: none;
   }
@@ -170,7 +170,37 @@ h1 {
   align-items: center;
 }
 
+.title h2 {
+  font-size: 32px;
+  font-weight: 700;
+  letter-spacing: 38px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
 .title h2,
 .title img {
   width: 50%;
+  border-radius: 50px;
+}
+
+.title img {
+  aspect-ratio: 2.17;
+  object-fit: cover;
+}
+
+@media (max-width: 991px) {
+  .title h2 {
+    letter-spacing: 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  .title img {
+    display: none;
+  }
+  .title h2 {
+    font-size: 23px;
+    letter-spacing: 27px;
+  }
 }
