--- a/css/main.css
+++ b/css/main.css
@@ -163,11 +163,14 @@ h1 {
   }
 }
 
-.title {
+.title,
+.button,
+.center {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin: 0;
 }
 
 .title h2 {
@@ -179,7 +182,9 @@ h1 {
 }
 
 .title h2,
-.title img {
+.title img,
+.button img,
+.center {
   width: 50%;
   border-radius: 50px;
 }
@@ -189,6 +194,18 @@ h1 {
   object-fit: cover;
 }
 
+.button-menu {
+  border: 1px solid var(--pink);
+  border-radius: 50px;
+  width: 165px;
+  height: 42px;
+  font-weight: 700;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (max-width: 991px) {
   .title h2 {
     letter-spacing: 30px;
@@ -196,7 +213,9 @@ h1 {
 }
 
 @media (max-width: 768px) {
-  .title img {
+  .title img,
+  .button img,
+  .text img {
     display: none;
   }
   .title h2 {
