--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ header {
   flex-direction: row;
   justify-content: space-around;
   align-content: center;
+  padding: 0 20%;
 }
 
 .navigation a {
@@ -96,7 +97,7 @@ h1 {
 
 .intro {
   text-align: center;
-  padding: 100px 0 130px;
+  padding: 50px 0;
 }
 
 .intro p,
@@ -163,6 +164,17 @@ h1 {
   }
 }
 
+.pattern {
+  height: 90px;
+  width: auto;
+  background-image: url(/img/france/french-pattern.png);
+  background-size: contain;
+}
+
+.content {
+  padding: 30px 0 50px;
+}
+
 .title,
 .center,
 .img-height {
@@ -205,6 +217,18 @@ section img {
   margin: 35px 0;
 }
 
+@media (min-width: 576px) {
+  .pattern {
+    height: 160px;
+  }
+}
+
+@media (min-width: 768px) {
+  .pattern {
+    height: 260px;
+  }
+}
+
 @media (max-width: 991px) {
   .title h2 {
     letter-spacing: 30px;
@@ -218,5 +242,11 @@ section img {
   .title h2 {
     font-size: 23px;
     letter-spacing: 27px;
+  }
+}
+
+@media (min-width: 768px) {
+  .carousel {
+    display: none;
   }
 }
