--- a/css/main.css
+++ b/css/main.css
@@ -284,3 +284,43 @@ footer {
   background-color: var(--white);
   color: var(--darkgray);
 }
+
+footer h2 {
+  font-weight: 400;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 20px;
+}
+
+footer a {
+  color: var(--darkgray);
+  text-decoration: 0.75px underline;
+  font-size: 12px;
+}
+
+.timetable {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  gap: 6px;
+}
+
+.instagram,
+.mail,
+.phone,
+.adress,
+.timetable {
+  display: flex;
+  justify-items: center;
+}
+
+.icon {
+  width: 25px;
+  margin-right: 45px;
+}
