--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,7 @@ section img {
   border-radius: 50px;
 }
 
-.title h2 {
+h2 {
   font-size: 32px;
   font-weight: 700;
   letter-spacing: 38px;
@@ -287,15 +287,21 @@ footer {
 
 footer h2 {
   font-weight: 400;
-  text-transform: uppercase;
-  text-align: center;
   font-size: 20px;
+  letter-spacing: normal;
+  margin: 55px 0 35px;
 }
 
 footer a {
   color: var(--darkgray);
   text-decoration: 0.75px underline;
   font-size: 12px;
+}
+
+.footer-center {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
 }
 
 .timetable {
@@ -311,6 +317,11 @@ footer a {
   gap: 6px;
 }
 
+.contact-center {
+  display: flex;
+  justify-content: center;
+}
+
 .instagram,
 .mail,
 .phone,
@@ -323,4 +334,20 @@ footer a {
 .icon {
   width: 25px;
   margin-right: 45px;
+}
+
+.credit {
+  font-size: 11px;
+  margin: 30px 0;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .footer-center {
+    flex-direction: row;
+  }
+  .contact {
+    margin-top: 55px;
+    gap: 30px;
+  }
 }
