--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,10 @@ h2 {
   section img {
     display: none;
   }
+  section .carousel img {
+    display: block;
+    margin-bottom: 35px;
+  }
   .title h2 {
     font-size: 23px;
     letter-spacing: 27px;
