--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,7 @@ html {
 header {
   background-color: var(--darkgray);
   padding: 20px 0;
+  /* position: fixed; */
 }
 
 @media (min-width: 1200px) {
@@ -63,18 +64,22 @@ header {
   }
 }
 
-.navigation {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-content: center;
-  padding: 0 20%;
-}
-
 .navigation a {
   border-radius: 50px;
   border: 1px solid var(--pink);
-  padding: 12px 90px;
+  padding: 12px 50px;
+}
+
+@media (min-width: 991px) {
+  .navigation a {
+    padding: 12px 70px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .navigation a {
+    padding: 12px 100px;
+  }
 }
 
 a {
@@ -114,12 +119,6 @@ h1 {
   }
   .burger-menu {
     display: block;
-  }
-}
-
-@media (min-width: 1200px) {
-  .nav a {
-    padding: 40px;
   }
 }
 
