--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,8 @@ html {
 header {
   background-color: var(--darkgray);
   padding: 20px 0;
-  /* position: fixed; */
+  position: fixed;
+  width: 100%;
 }
 
 @media (min-width: 1200px) {
@@ -64,22 +65,18 @@ header {
   }
 }
 
+.navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-content: center;
+  padding: 0 20%;
+}
+
 .navigation a {
   border-radius: 50px;
   border: 1px solid var(--pink);
-  padding: 12px 50px;
-}
-
-@media (min-width: 991px) {
-  .navigation a {
-    padding: 12px 70px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .navigation a {
-    padding: 12px 100px;
-  }
+  padding: 12px 90px;
 }
 
 a {
@@ -102,7 +99,7 @@ h1 {
 
 .intro {
   text-align: center;
-  padding-top: 50px;
+  padding-top: 135px;
 }
 
 .intro p,
