--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ header {
 .navigation a {
   border-radius: 50px;
   border: 1px solid var(--pink);
-  padding: 12px 90px;
+  padding: 12px 10%;
 }
 
 a {
