--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,12 @@ header {
   z-index: 10;
 }
 
+@media (max-width: 767px) {
+  header {
+    height: 60px;
+  }
+}
+
 @media (min-width: 1200px) {
   p {
     font-size: 18px;
@@ -318,6 +324,7 @@ h1 {
   margin: 0;
   height: 100%;
 }
+
 .img-height img {
   height: 100%;
   object-fit: cover;
@@ -344,6 +351,9 @@ h2 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.menu-mobile {
 }
 
 .text-part p {
