--- a/css/main.css
+++ b/css/main.css
@@ -333,6 +333,7 @@ h1 {
   height: 100%;
   object-fit: cover;
 }
+
 section img {
   border-radius: 50px;
 }
@@ -360,6 +361,7 @@ h2 {
 .menu-mobile.is-active {
   opacity: 1;
   pointer-events: auto;
+  max-height: 1000px;
 }
 
 .menu-mobile {
@@ -368,7 +370,18 @@ h2 {
   line-height: normal;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 0.3s;
+  transition: opacity 0.3s, max-height 0.3s;
+  max-height: 0;
+  overflow: hidden;
+}
+
+@media (min-width: 768px) {
+  .menu-mobile {
+    display: none;
+  }
+  .center.no-height {
+    height: 100%;
+  }
 }
 
 h3 {
