--- a/css/main.css
+++ b/css/main.css
@@ -287,11 +287,11 @@ h1 {
 }
 
 .pattern-ethiopian {
-  background-image: url(/img/éthiopie/ethiopian-pattern.png);
+  background-image: url(/img/eethiopie/ethiopian-pattern.png);
 }
 
 .pattern-greek {
-  background-image: url(/img/grèce/greek-pattern.png);
+  background-image: url(/img/greece/greek-pattern.png);
 }
 
 .pattern-mexican {
